..F....... [ZBXNEXT-1196] redesigned setup form (Toms)
...G...... [ZBXNEXT-1188] added support of "agent.hostname" check (Sasha)
..F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Dutch, Greek, Japanese, Latvian, Polish, Russian, Spanish and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1181] redesign Host mass update (Eduard)

Bug fixes:
..F....... [ZBX-4957] removed error column from item prototypes list, removed 'not supported' status from item prototype edit form (Vedmak)
..F....... [ZBX-4981] triggers with lld created or web items are not exported for now (Vedmak)
A.F....... [ZBX-4956] fixed incorrent trigger existance checks (Pavels)
..F....... [ZBX-4815] improved IT service configuration and SLA report page performance (Pavels)
..F....... [ZBX-4815] fixed IT service sorting on the service configuration page (Pavels)
..F....... [ZBX-4815] fixed IT service configuration pop up menu translation (Pavels)
..F....... [ZBX-4815] fixed IT service status update when changing the linked trigger severity (Pavels)
A......... [ZBX-4815] fixed sorting for results returned by the "selectDepdendencies" and "selectParentDependencies" parameters for service.get (Pavels)
..F....... [ZBX-4960] fixed LDAP frontend messages, fixed message in latest data (Vedmak)
..F....... [ZBX-4920] fixed templates from 1.8 xml are dependent on 'hosts' rules (Vedmak)
...G...PS. [ZBX-4942] do not send prototypes for active agent to process (dimir)
....I..PS. [ZBX-4941] added default DBHost configuration parameter value "localhost" (dimir)
....I..... [ZBX-4471] fixed warnings when applying 2.0 dbpatches (dimir)
..F....... [ZBX-4969] fixed item key param macro not resolved in simple graph popup (Vedmak)
..F....... [ZBX-4964] added requirements checks for xmlreader and xmlwriter (Vedmak)
..F....... [ZBX-4967] fixed template full clone (Toms)
..F....... [ZBX-3148] fixed user macro not expanded in trigger names (Toms)